--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -33,7 +33,7 @@
                         <i class="material-icons">notifications</i>
                         <span class="notification">5</span>
                         <p>
-                            <span class="d-lg-none d-md-block">Some Actions</span>
+                            <span class="d-lg-none d-md-block">My Actions</span>
                         </p>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
