--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -26,8 +26,8 @@
                       <div class="card-icon">
                           <i class="material-icons">store</i>
                       </div>
-                      <p class="card-category">Revenue</p>
-                      <h3 class="card-title">$34,245</h3>
+                      <p class="card-category">Medicine Stock</p>
+                      <h3 class="card-title">7,000</h3>
                   </div>
                   <div class="card-footer">
                       <div class="stats">
