--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="logo">
     <a href="https://www.lanworks.com.sg" class="simple-text">
         <div class="logo-img">
-            <img src="/assets/img/heart3.png"/>
+            <img src="assets/img/heart3.png"/>
         </div>
         Cura Hearts
     </a>
